--- a/style.css
+++ b/style.css
@@ -77,6 +77,11 @@ a:link {
   border: 2px solid rgb(0, 73, 73);
 }
 
+a:visited {
+  text-decoration: none;
+  color: rgb(0, 73, 73);
+}
+
 a:hover {
   text-decoration: none;
   color: teal;
